# Abaad-3D-Print-Manager-V5.0-ERP-Edition

./: BUG_REPORT_AND_FIX_PLAN.md  FileTree.md  LICENSE  Launch_App.bat  PROGRESS_TRACKER.md  README.md  SETUP.bat  gitignore  launch.sh  main.py  pyproject.toml  requirements.txt  setup.sh
data/: abaad_v5.db  users.json
scripts/: install.py  migrate_v4_to_v5.py
src/auth/: auth_manager.py  permissions.py
src/core/: _model_aliases.py  config.py  database.py  models.py
src/services/: __init__.py  _compat.py  customer_service.py  finance_service.py  inventory_service.py  order_service.py  pdf_service.py  printer_service.py
src/ui/: app.py  context_menu.py  theme.py  widgets.py
src/ui/dialogs/: item_dialog.py  login_dialog.py
src/ui/tabs/: analytics_tab.py  customers_tab.py  expenses_tab.py  failures_tab.py  filament_tab.py  orders_tab.py  printers_tab.py  settings_tab.py  stats_tab.py
src/utils/: helpers.py
tests/: test_database.py  test_inventory_service.py  test_migration.py  test_models.py  test_order_service.py  test_pdf_service.py
