[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "abaad-erp"
version = "5.0.0"
description = "Desktop ERP for a 3D printing service business — Ismailia, Egypt"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Proprietary" }
dependencies = [
    "reportlab>=4.1.0",   # Required: PDF generation
]

[project.optional-dependencies]
ocr = [
    "Pillow>=10.4.0",
    "pytesseract>=0.3.13",
]
charts = [
    "matplotlib>=3.9.0",
]
all = [
    "Pillow>=10.4.0",
    "pytesseract>=0.3.13",
    "matplotlib>=3.9.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]

[project.scripts]
abaad-erp = "main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v"